<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="xyz.fayadh.quizapp.MainActivity">

        <TextView
            style="@style/textSt"
            android:padding="10dp"
            android:text="@string/quote1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- A CardView that contains a TextView -->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view1"
            style="@style/cardStyle"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="#81D4FA"
            card_view:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_text1"
                    style="@style/textSt"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Whats 4 + 6" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view2"
            style="@style/cardStyle"
            card_view:cardBackgroundColor="#EEFF41"
            card_view:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_text2"
                    style="@style/textSt"
                    android:text="@string/quote2" />

                <RadioGroup
                    android:id="@+id/group2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rad2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dr Seus" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Marilyn Monroe" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Oscar Wilde" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Obama" />
                </RadioGroup>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view3"
            style="@style/cardStyle"
            card_view:cardBackgroundColor="#B2FF59"
            card_view:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_text3"
                    style="@style/textSt"
                    android:text="@string/quote3" />

                <RadioGroup
                    android:id="@+id/group3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dr Seus" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Albert Einstien" />

                    <RadioButton
                        android:id="@+id/rad3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bernard" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Frank Zappa" />
                </RadioGroup>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view4"
            style="@style/cardStyle"
            card_view:cardBackgroundColor="#00E676"
            card_view:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_text4"
                    style="@style/textSt"
                    android:text="@string/quote4" />

                <RadioGroup
                    android:id="@+id/group4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bernard" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fayadh" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Marilyn Monroe" />

                    <RadioButton
                        android:id="@+id/rad4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Frank Zappa" />
                </RadioGroup>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view5"
            style="@style/cardStyle"
            card_view:cardBackgroundColor="#00BCD4"
            card_view:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_text5"
                    style="@style/textSt"
                    android:text="@string/quote5" />

                <RadioGroup
                    android:id="@+id/group5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rad5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mae West" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kanye West" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="God" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gandhi" />
                </RadioGroup>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view6"
            style="@style/cardStyle"
            card_view:cardBackgroundColor="#FFEB3B"
            card_view:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_text6"
                    style="@style/textSt"
                    android:text="@string/quote6" />

                <CheckBox
                    android:id="@+id/rad6D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jon Snow" />

                <CheckBox
                    android:id="@+id/rad6C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Arya Stark" />

                <CheckBox
                    android:id="@+id/rad6A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rose Leslie" />

                <CheckBox
                    android:id="@+id/rad6B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ygritte" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view7"
            style="@style/cardStyle"
            card_view:cardBackgroundColor="#B388FF"
            card_view:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_text7"
                    style="@style/textSt"
                    android:text="@string/quote7" />

                <RadioGroup
                    android:id="@+id/group7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rad7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Elbert Hubbard" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dr Seuss" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bob Marley" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gandhi" />
                </RadioGroup>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view8"
            style="@style/cardStyle"
            card_view:cardBackgroundColor="#69F0AE"
            card_view:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_text8"
                    style="@style/textSt"
                    android:text="@string/qupte8" />

                <RadioGroup
                    android:id="@+id/group8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mae West" />

                    <RadioButton
                        android:id="@+id/rad8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Stephen Chbosky" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Elbert-Hubbard" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gandhi" />
                </RadioGroup>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="scoreClick"
            android:text="Score" />

        <TextView
            android:id="@+id/score"
            style="@style/textSt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="Score: 0"
            android:textAlignment="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="resetScores"
            android:text="Reset" />

    </LinearLayout>
</ScrollView>